--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="build/css/main.min.css">
     <script src="build/js/main.min.js"></script>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
@@ -35,7 +36,7 @@
                                 <img src="build/images/Globe.png" alt="langico">
                             </div>
                             <div class="headerLanguage__text">
-                                English
+                                <a href="#">English</a>
                             </div>
                         </div>
                     </div>
@@ -52,26 +53,28 @@
                                     <p>конгрессно-выставочный центр<br> Санкт-Петербурга</p>
                                 </div>
                                 <div class="headerHeading__about">
-                                    <p>О комплексе <img src="assets/images/Arrow.png" alt="arrowico"></p>
+                                    <p><a href="#">О комплексе </a><img src="assets/images/Arrow.png" alt="arrowico"></p>
                                 </div>
                             </div>
                             <div class="headerBlock">
                                 <ul>
                                     <li>
-                                        <p class="headerBlock__text">Календарь мероприятий</p>
-                                        <p class="headerBlock__more">Подробнее <img src="assets/images/Arrow.png" alt="arrowico"></p>
+                                        <div class="headerBlock__wrapper">
+                                          <p class="headerBlock__text">Календарь мероприятий</p>
+                                          <p class="headerBlock__more"><a href="#">Подробнее</a><img src="assets/images/Arrow.png" alt="arrowico"></p>
+                                        </div>
                                     </li>
                                     <li>
                                         <p class="headerBlock__text">Как добраться до Экспофорума</p>
-                                        <p class="headerBlock__more">Подробнее <img src="assets/images/Arrow.png" alt="arrowico"></p>
+                                        <p class="headerBlock__more"><a href="#">Подробнее</a><img src="assets/images/Arrow.png" alt="arrowico"></p>
                                     </li>
                                     <li>
                                         <p class="headerBlock__text">Онлайн-заявка на организацию мероприятия </p>
-                                        <p class="headerBlock__more">Подробнее <img src="assets/images/Arrow.png" alt="arrowico"></p>
+                                        <p class="headerBlock__more"><a href="#">Подробнее</a><img src="assets/images/Arrow.png" alt="arrowico"></p>
                                     </li>
                                     <li>
                                         <p class="headerBlock__text">План<br> и инфраструктура комплекса</p>
-                                        <p class="headerBlock__more">Подробнее <img src="assets/images/Arrow.png" alt="arrowico"></p>
+                                        <p class="headerBlock__more"><a href="#">Подробнее</a><img src="assets/images/Arrow.png" alt="arrowico"></p>
                                     </li>
                                 </ul>
                             </div>
@@ -128,37 +131,37 @@
                                             <li>
                                                 <img class="sectionEvents__Events-img" src="assets/images/eventimg.png" alt="eventimg">
                                                 <p class="sectionEvents__Events-date">2 января 2020 г. – 7 января 2020 г.</p>
-                                                <p class="sectionEvents__Events-name">ЭКСПО ЕЛКА</p>
+                                                <p class="sectionEvents__Events-name"><a href="#">ЭКСПО ЕЛКА</a></p>
                                                 <p class="sectionEvents__Events-description">Парк интерактивных развлечений</p>
                                             </li>
                                             <li>
                                                 <img class="sectionEvents__Events-img" src="assets/images/eventimg2.png" alt="eventimg">
                                                 <p class="sectionEvents__Events-date">5 февраля 2020 г. – 9 февраля 2020 г.</p>
-                                                <p class="sectionEvents__Events-name">Junwex Петербург</p>
+                                                <p class="sectionEvents__Events-name"><a href="#">Junwex Петербург</a></p>
                                                 <p class="sectionEvents__Events-description">Выставка ювелирных изделий</p>
                                             </li>
                                             <li>
                                                 <img class="sectionEvents__Events-img" src="assets/images/eventimg3.png" alt="eventimg">
                                                 <p class="sectionEvents__Events-date">7 февраля 2020 г. – 9 февраля 2020 г.</p>
-                                                <p class="sectionEvents__Events-name">Невский ларец</p>
+                                                <p class="sectionEvents__Events-name"><a href="#">Невский ларец</a></p>
                                                 <p class="sectionEvents__Events-description">Выставка-ярмарка народных художественных<br> промыслов и ремесел</p>
                                             </li>
                                             <li>
                                                 <img class="sectionEvents__Events-img" src="assets/images/eventimg4.png" alt="eventimg">
                                                 <p class="sectionEvents__Events-date">14 февраля 2020 г. – 23 февраля 2020 г.</p>
-                                                <p class="sectionEvents__Events-name">ПОНАЕХАЛИ!</p>
+                                                <p class="sectionEvents__Events-name"><a href="#">ПОНАЕХАЛИ!</a></p>
                                                 <p class="sectionEvents__Events-description">Специализированная арт-ярмарка</p>
                                             </li>
                                             <li>
                                                 <img class="sectionEvents__Events-img" src="assets/images/eventimg5.png" alt="eventimg">
                                                 <p class="sectionEvents__Events-date">18 февраля 2020 г. – 21 февраля 2020 г.</p>
-                                                <p class="sectionEvents__Events-name">VET.CAMP</p>
+                                                <p class="sectionEvents__Events-name"><a href="#">VET.CAMP</a></p>
                                                 <p class="sectionEvents__Events-description">Конференция для ветеринарных врачей</p>
                                             </li>
                                             <li>
                                                 <img class="sectionEvents__Events-img" src="assets/images/eventimg6.png" alt="eventimg">
                                                 <p class="sectionEvents__Events-date">26 февраля 2020 г. – 28 февраля 2020 г.</p>
-                                                <p class="sectionEvents__Events-name">ExpoHoReCa</p>
+                                                <p class="sectionEvents__Events-name"><a href="#">ExpoHoReCa</a></p>
                                                 <p class="sectionEvents__Events-description">Специализированная выставка</p>
                                             </li>
                                         </ul>
@@ -185,7 +188,7 @@
                                                     </div>
                                                     <div class="sectionNews__news-content-text">
                                                         <p>4 января 2020 г.</p>
-                                                        <p>Как объединилась реальность и<br> виртуальность – LIKEE PARTY</p>
+                                                        <p><a href="#">Как объединилась реальность и<br> виртуальность – LIKEE PARTY</a></p>
                                                     </div>
                                                 </li>
                                                 <li>
@@ -194,7 +197,7 @@
                                                     </div>
                                                     <div class="sectionNews__news-content-text">
                                                         <p>4 января 2020 г.</p>
-                                                        <p>Как объединилась реальность и<br> виртуальность – LIKEE PARTY</p>
+                                                        <p><a href="#">Как объединилась реальность и<br> виртуальность – LIKEE PARTY</a></p>
                                                     </div>
                                                 </li>
                                                 <li>
@@ -203,7 +206,7 @@
                                                     </div>
                                                     <div class="sectionNews__news-content-text">
                                                         <p>4 января 2020 г.</p>
-                                                        <p>Как объединилась реальность и<br> виртуальность – LIKEE PARTY</p>
+                                                        <p><a href="#">Как объединилась реальность и<br> виртуальность – LIKEE PARTY</a></p>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -258,8 +261,8 @@
                                         </li>
                                     <li>
                                       <p>Приложение</p>
-                                      <p><img src="assets/images/appstorico.png" alt="appico"></p>
-                                      <p><img src="assets/images/googleplayico.png" alt="appico"></p>
+                                      <p><a href="#"><img src="assets/images/appstorico.png" alt="appico"></a></p>
+                                      <p><a href="#"><img src="assets/images/googleplayico.png" alt="appico"></a></p>
                                     </li>
                                 </ul>
                             </div>
@@ -267,10 +270,10 @@
                                 <ul>
                                     <li>
                                       <p>Мы в соц. сетях</p>
-                                      <img src="assets/images/ytico.png" alt="appico">
-                                      <img src="assets/images/vkico.png" alt="vkico">
-                                      <img src="assets/images/fcico.png" alt="fcico">
-                                      <img src="assets/images/instico.png" alt="instico">
+                                      <a href="#"><img src="assets/images/ytico.png" alt="appico"></a>
+                                      <a href="#"><img src="assets/images/vkico.png" alt="vkico"></a>
+                                      <a href="#"><img src="assets/images/fcico.png" alt="fcico"></a>
+                                      <a href="#"><img src="assets/images/instico.png" alt="instico"></a>
                                     </li>
                                     <li>
                                         <p>Подписка на новости</p>
